--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 project(video_transform_micro_server)
 set(CMAKE_BUILD_TYPE "Debug")
 set(CMAKE_C_FLAGS "-Wall -Wno-unused-variable -std=c99")
-set(CMAKE_CXX_FLAGS "-std=c++11 -fpermissive -Wall -Wno-unused-variable")
+set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wno-unused-variable")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -O0 -g")
 set(CMAKE_C_FLAGE_RELEASE "${CMAKE_C_FLAGS} -O3 -Wall")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -g")
