adapt cmakelist to 2.8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ find_package(spdlog REQUIRED)
 find_package(Poco REQUIRED Foundation Util Net)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(PC_AVFORMAT REQUIRED IMPORTED_TARGET libavformat)
-pkg_check_modules(PC_AVUTIL REQUIRED IMPORTED_TARGET libavutil)
-pkg_check_modules(PC_AVCODEC REQUIRED IMPORTED_TARGET libavcodec)
+pkg_check_modules(PC_AVFORMAT REQUIRED libavformat)
+pkg_check_modules(PC_AVUTIL REQUIRED libavutil)
+pkg_check_modules(PC_AVCODEC REQUIRED libavcodec)
 find_path(AVFORMAT_INCLUDE_DIR libavformat/avformat.h HINTS ${PC_AVFORMATINCLUDEDIR} ${PC_AVFORMAT_INCLUDE_DIRS})
 find_library(AVFORMAT_LIBRARY avformat HINTS ${PC_AVFORMAT_LIBDIR} ${PC_AVFORMAT_LIBRARY_DIRS})
 find_path(AVUTIL_INCLUDE_DIR libavutil/avutil.h HINTS ${PC_AVUTIL_INCLUDEDIR} ${PC_AVUTIL_INCLUDE_DIRS})
